--- a/app/views/peeps.erb
+++ b/app/views/peeps.erb
@@ -1,10 +1,10 @@
 <h1> Peeps </h1>
 
 <ul id='peep'>
-  <%@peeps.each do |peep|%>
+  <%@peeps.reverse.each do |peep|%>
   <li>
     <%= peep.peep %>
-    <%= 'created_at'%>
+    <%= peep.created_at %>
   </li>
   <% end %>
 </ul>
