I can log in again test passed but broke the I can sign up

--- a/app/views/users/new.erb
+++ b/app/views/users/new.erb
@@ -9,5 +9,9 @@
   <label for='password'>
     Password: <input name='password' type='password'>
   </label>
+  <label for='password confirmation'>
+    Password: <input name='password_confirmation' type='password'>
+  </label>
   <input type='submit' value='Sign up'>
+  <input type='submit' value='Log in'>
 </form>
