I can log in as existing user test fails

--- a/app/views/users/new.erb
+++ b/app/views/users/new.erb
@@ -10,7 +10,7 @@
     Password: <input name='password' type='password'>
   </label>
   <label for='password confirmation'>
-    Password: <input name='password_confirmation' type='password'>
+    Confirm your Password: <input name='password_confirmation' type='password'>
   </label>
   <input type='submit' value='Sign up'>
   <input type='submit' value='Log in'>
