--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -8,6 +8,15 @@
     <% if current_user %>
       Welcome, <%= current_user.email %>
     <% end %>
+    <% if current_user %>
+    <form method='post' action='/sessions'>
+      <input type='hidden' name='_method' value='delete'>
+      <input type='submit' value='Sign out'>
+    </form>
+    <% end %>
+    <% if flash[:notice] %>
+    <div id='notice'><%= flash[:notice] %></div>
+    <% end %>
     <%= yield %>  <!-- this then yields to the view which has been called by your controller -->
   </body>
 </html>
